[metadata]
name = sport_analysis
version = attr: sport_analysis.__version__
url = https://github.com/zoekazu/sport_analysis.git
license_file = file: LICENSE
description = Collection of sport analysis modules.
long_description = file: README.md

[options]
install_requires =
    numpy
    opencv-python
python_requires = >= 3.8

[options.extras_require]
develop =
    pytest
    jupyter
    matplotlib
    pre-commit
    autopep8
    flake8

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 100
exclude =
    ipynb/
    scripts/
    sport_analysis/__init__.py
